--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"eslint": "^9.25.0",
 		"globals": "^16.0.0",
 		"prettier": "^3.5.3",
+		"rollup": "^4.40.0",
 		"tsdown": "^0.9.1",
 		"tsx": "^4.19.3",
 		"typescript": "^5.8.3",
