--- a/package.json
+++ b/package.json
@@ -37,30 +37,31 @@
 		"prepublishOnly": "pnpm run build"
 	},
 	"peerDependencies": {
-		"vite": "^6.3.3"
+		"vite": "^6.3.3 || ^7.0.0"
 	},
 	"devDependencies": {
-		"@eslint/js": "^9.25.1",
-		"@types/bun": "^1.2.11",
-		"@types/estree": "^1.0.7",
-		"@types/node": "^22.15.3",
-		"bumpp": "^10.1.0",
-		"eslint": "^9.25.1",
-		"globals": "^16.0.0",
-		"rollup": "^4.40.1",
-		"tsdown": "^0.10.2",
-		"tsx": "^4.19.4",
+		"@eslint/js": "^9.30.1",
+		"@types/bun": "^1.2.18",
+		"@types/estree": "^1.0.8",
+		"@types/node": "^24.0.10",
+		"bumpp": "^10.2.0",
+		"eslint": "^9.30.1",
+		"globals": "^16.3.0",
+		"tsdown": "^0.12.9",
+		"tsx": "^4.20.3",
 		"typescript": "^5.8.3",
-		"typescript-eslint": "^8.31.1",
-		"vite": "^6.3.3"
+		"typescript-eslint": "^8.36.0",
+		"vite": "^7.0.2"
 	},
-	"packageManager": "pnpm@10.10.0",
+	"packageManager": "pnpm@10.12.4",
 	"dependencies": {
 		"@graphql-tools/load": "^8.1.0",
 		"@graphql-tools/url-loader": "^8.0.31",
+		"chokidar": "^4.0.3",
 		"graphql": "^16.11.0",
 		"magic-string": "^0.30.17",
-		"prettier": "^3.5.3",
+		"prettier": "^3.6.2",
+		"rollup": "^4.44.2",
 		"zimmerframe": "^1.1.2"
 	}
 }
