--- a/package.json
+++ b/package.json
@@ -40,28 +40,28 @@
 		"vite": "^6.3.3 || ^7.0.0"
 	},
 	"devDependencies": {
-		"@eslint/js": "^9.31.0",
-		"@types/bun": "^1.2.18",
+		"@eslint/js": "^9.39.2",
+		"@types/bun": "^1.3.6",
 		"@types/estree": "^1.0.8",
 		"@types/node": "^24.0.14",
 		"bumpp": "^10.2.0",
-		"eslint": "^9.31.0",
-		"globals": "^16.3.0",
-		"tsdown": "^0.12.9",
-		"tsx": "^4.20.3",
-		"typescript": "^5.8.3",
-		"typescript-eslint": "^8.37.0",
-		"vite": "^7.0.5"
+		"eslint": "^9.39.2",
+		"globals": "^17.0.0",
+		"tsdown": "0.20.0-beta.3",
+		"tsx": "^4.21.0",
+		"typescript": "^5.9.3",
+		"typescript-eslint": "^8.53.0",
+		"vite": "^7.3.1"
 	},
-	"packageManager": "pnpm@10.12.4",
+	"packageManager": "pnpm@10.27.0",
 	"dependencies": {
-		"@graphql-tools/load": "^8.1.1",
-		"@graphql-tools/url-loader": "^8.0.32",
-		"chokidar": "^4.0.3",
-		"graphql": "^16.11.0",
-		"magic-string": "^0.30.17",
-		"prettier": "^3.6.2",
-		"rollup": "^4.45.1",
-		"zimmerframe": "^1.1.2"
+		"@graphql-tools/load": "^8.1.8",
+		"@graphql-tools/url-loader": "^9.0.6",
+		"chokidar": "^5.0.0",
+		"graphql": "^16.12.0",
+		"magic-string": "^0.30.21",
+		"prettier": "^3.7.4",
+		"rollup": "^4.55.1",
+		"zimmerframe": "^1.1.4"
 	}
 }
