--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
 	],
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/ottomated/vite-plugin-gql"
+		"url": "git+https://github.com/ottomated/vite-plugin-gql.git"
+	},
+	"bin": {
+		"gql-typegen": "./dist/bin.js"
 	},
 	"main": "./dist/index.js",
 	"module": "./dist/index.js",
@@ -44,7 +47,7 @@
 		"@types/bun": "^1.3.6",
 		"@types/estree": "^1.0.8",
 		"@types/node": "^24.0.14",
-		"bumpp": "^10.2.0",
+		"bumpp": "^10.4.0",
 		"eslint": "^9.39.2",
 		"globals": "^17.0.0",
 		"tsdown": "0.20.0-beta.3",
@@ -53,14 +56,16 @@
 		"typescript-eslint": "^8.53.0",
 		"vite": "^7.3.1"
 	},
-	"packageManager": "pnpm@10.27.0",
+	"packageManager": "pnpm@10.28.0",
 	"dependencies": {
 		"@graphql-tools/load": "^8.1.8",
 		"@graphql-tools/url-loader": "^9.0.6",
 		"chokidar": "^5.0.0",
+		"fdir": "^6.5.0",
 		"graphql": "^16.12.0",
 		"magic-string": "^0.30.21",
-		"prettier": "^3.7.4",
+		"oxc-parser": "^0.108.0",
+		"prettier": "^3.8.0",
 		"rollup": "^4.55.1",
 		"zimmerframe": "^1.1.4"
 	}
